--- a/admin/common/common.css
+++ b/admin/common/common.css
@@ -16,8 +16,9 @@
 
 .custom-alert{
   position: fixed;
-  top: 25px;
-  right: 25px;
+  top: 80px; 
+  right: 20px; 
+  max-width: 300px;
 }
 
 #dashboard-menu{
