--- a/admin/common/common.css
+++ b/admin/common/common.css
@@ -5,7 +5,6 @@
   font-family: 'EB Garamond', serif;
 }
 
-
 .custom-bg{
   background-color: #007BFF;
 }
@@ -24,7 +23,7 @@
 #dashboard-menu{
   position: fixed;
   height: 100%;
-  background-color: white;
+  z-index: 11;
 }
 
 @media screen and (max-width: 992px){
@@ -36,3 +35,4 @@
     margin-top: 60px;
   }
 }
+
