--- a/common/common.css
+++ b/common/common.css
@@ -37,3 +37,10 @@ input[type=number] {
     padding: 0 35px;
   }
 }
+
+.custom-alert{
+  position: fixed;
+  top: 80px; 
+  right: 20px; 
+  max-width: 300px;
+}
